---------------------------------------------------------------------------------------------------
Version: 1.7.0
Date: 2022-05-15
  Changes:
    - New Tile Planners for creating Tiles that might not otherwise be possible, only within Sandboxes
---------------------------------------------------------------------------------------------------
Version: 1.6.1
Date: 2022-04-25
  Changes:
    - Resource Planners consider the Map Generator's Richness and Resource-specific values when determining how much to place
    - Resource Planners consider the Bounding Box of the Resource when determining how often to place
---------------------------------------------------------------------------------------------------
Version: 1.6.0
Date: 2022-05-03
  Changes:
    - Last-known-Positions within Sandboxes are persisted so that they can be returned to when swapping between Sandboxes and other Surfaces
    - Cheat-mode is toggled between the previous state and true, instead of reverting back to false
    - Players that are toggled into the Map Editor can no longer enter a Sandbox (otherwise their original Character would be lost)
    - Non-Character Inventories are persisted so that they can be restored when exiting a Sandbox
  Bugfixes:
    - Removed Players wouldn't clean up their Persistent Inventories
---------------------------------------------------------------------------------------------------
Version: 1.5.1
Date: 2022-04-25
  Changes:
    - Craft-to-Cursor is smarter about exactly which Item ends up in the Cursor for Recipes with multiple Products
  Bugfixes:
    - Crafting a Recipe in a Sandbox that produces a Liquid would crash
---------------------------------------------------------------------------------------------------
Version: 1.5.0
Date: 2022-04-21
  Changes:
    - Bonus Inventory Slots for Sandboxes Setting
    - Prevent Sandbox Inventories from becoming full by spilling their last slot
    - Provide a "Trash can" in new Sandboxes