@@ -3,4 +3,5 @@ ToggleGUI = require("scripts.toggle-gui")
 
 require("prototypes.item-groups")
 require("prototypes.shortcuts")
+require("prototypes.styles")
 require("prototypes.tips-and-tricks")
