@@ -41,10 +41,12 @@ blueprint-sandboxes=Blueprint Sandboxes
 bpsb-toggle-gui=Blueprint Sandboxes __CONTROL__bpsb-toggle-gui-sb-toggle-shortcut__
 bpsb-toggle-gui-selected-sandbox-dropdown=Sandbox
 bpsb-toggle-gui-reset-button=Reset
+bpsb-toggle-gui-daytime-slider=Daytime
 
 [gui-description]
 bpsb-toggle-gui-selected-sandbox-dropdown=Choose which Sandbox to play in
 bpsb-toggle-gui-reset-button=Clear and Reset this Sandbox
+bpsb-toggle-gui-daytime-slider=Controls the amount of daylight
 
 [sandbox]
 bpsb-sb-player-lab=My own Lab
